# ViennaCS

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
cmake/: csVersion.hpp.in
data/implant/: implant_moments.csv
examples/atomicLayerDeposition/: CMakeLists.txt  atomicLayerDeposition.py
examples/diffusion/: diffusion.cpp
examples/diffusionImplicit/: CMakeLists.txt  diffusionImplicit.cpp
examples/implant/: CMakeLists.txt  config.txt  implant.cpp  implant.py
examples/implantMask2D/: CMakeLists.txt  README.md  anneal_defect_diagnostics.csv  config.txt  config_table.txt  implantMask2D.py
examples/oxidationFront/: CMakeLists.txt  Efield.csv  README.md  config.txt  geometry.hpp  geometry.py  oxidationFront.cpp  oxidationFront.py  plotEfield.py  writeCSV.py
examples/plasmaDamage/: plasmaDamage.cpp
include/viennacs/: csAnneal.hpp  csConstants.hpp  csDenseCellSet.hpp  csImplant.hpp  csImplantModel.hpp  csTracing.hpp  csTracingKernel.hpp  csTracingParticle.hpp  csVersion.hpp
include/viennacs/models/: csImplantDamage.hpp  csImplantGaussian.hpp  csImplantPearson.hpp  csImplantTable.hpp
python/: CMakeLists.txt  __init__.py  generateStubs.py  pyWrap.cpp  pyWrap.hpp
python/viennacs/: __init__.pyi  _core.pyi  d2.pyi  d3.pyi
tests/sphere/: CMakeLists.txt  sphere.cpp
tests/trench/: CMakeLists.txt  trench.cpp
vsclib/: README.md
vsclib/anneal/: si_score_defaults.json
vsclib/implant/: si_taurus_defaults.json
vsclib/implant/tables/: antimony_damage_in_silicon_standard  antimony_in_semiconductor_standard  arsenic_damage_in_silicon_standard  arsenic_in_silicon_standard  boron_damage_in_silicon_standard  boron_in_silicon_standard  phosphorus_damage_in_silicon_standard  phosphorus_in_silicon_standard
